--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=index.php">
+    <meta http-equiv="refresh" content="0;url=siu.php">
     <title>Redirección</title>
 </head>
 <body>
     <!-- Si no se redirige automáticamente, puedes poner un mensaje aquí -->
-    <p>Si no eres redirigido automáticamente, <a href="index.php">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="siu.php">haz clic aquí</a>.</p>
 </body>
 </html>
