--- a/index.html
+++ b/index.html
@@ -2,11 +2,116 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=siu.php">
-    <title>Redirección</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WORDWONDER</title>
+    <link rel="stylesheet" href="./Css/index.css">
+    <link rel="stylesheet" href="./Css/Pagina.css">
+    <link rel="stylesheet" href="./Css/header.css">
+    <link rel="stylesheet" href="./Css/footer.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Si no se redirige automáticamente, puedes poner un mensaje aquí -->
-    <p>Si no eres redirigido automáticamente, <a href="siu.php">haz clic aquí</a>.</p>
+    <header>
+        <div>
+            <img src="./Imag/log.png" alt="Logo">
+            <h1>WORDWONDER
+            </h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Start</a></li>
+                <li><a href="MarcoS.php">Strategic framework</a></li>
+                <li><a href="Register.php">Register</a></li>
+                <li><a href="Login.php">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1 class="main-title">Autism and its Characteristics</h1>
+                <p class="description">
+                    Autism Spectrum Disorder (ASD) is a neurobiological condition that affects development, social interaction, communication, and involves repetitive and restricted behaviors. According to the American Psychiatric Association (2013), autism is defined within a spectrum due to the variability in functioning levels and abilities of individuals, ranging from those with significant support needs to those who can function more independently. The main characteristics of autism include difficulties in verbal and non-verbal communication, social interaction, and rigid or repetitive behavior patterns, which pose educational and social challenges for children and their families.
+                </p>
+            </div>
+            <div class="hero-image">
+                <img src="./Imag/1.jpg" alt="Interfaz de juegos educativos">
+            </div>
+        </section>
+
+        <section class="content-section">
+            <div class="content-image">
+                <img src="./Imag/2.jpg" alt="Niño aprendiendo con juegos educativos">
+            </div>
+            <div class="content-text">
+                <h2 class="section-title">Learning Challenges</h2>
+                <p class="description">
+                    For children with autism, traditional learning can be especially challenging, as they require methods adapted to their cognitive and behavioral characteristics. Research by Volkmar et al. (2014) indicates that children with ASD tend to respond better to structured approaches that integrate visual and repetitive methods, as well as consistent and predictable materials that allow them to build clear and concrete connections between concepts. Difficulties in communication and attention to multiple stimuli can complicate the learning of vocabulary and language skills, especially in an additional language like English.
+                </p>
+            </div>
+        </section>
+
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1 class="main-title">English Vocabulary Learning through Visual and Repetitive Methods</h1>
+                <p class="description">
+                    Vocabulary acquisition for children with ASD presents unique challenges. According to research by Tager Flusberg et al. (2009), children with autism tend to benefit from learning approaches that involve visual and repetitive methods. These methods help students build clear connections between words and images, which facilitates retention. Quill's (1995) visual teaching model proposes that children with ASD learn best when consistent, concrete, and predictable images and graphic representations are used. This aligns with studies by Parsons & Mitchell (2002), who assert that pictograms and image cards can significantly improve vocabulary learning by reducing ambiguity and reinforcing the association between words and meanings.
+                </p>
+            </div>
+            <div class="hero-image">
+                <img src="./Imag/3.jpg" alt="Interfaz de juegos educativos">
+            </div>
+        </section>
+
+        <section class="content-section">
+            <div class="content-image">
+                <img src="./Imag/4.jpg" alt="Niño aprendiendo con juegos educativos">
+            </div>
+            <div class="content-text">
+                <h2 class="section-title">Parental Support and Community Building in Learning</h2>
+                <p class="description">
+                    The role of parents in the education of children with autism is fundamental, especially when it comes to linguistic and academic skills. Studies by Koegel et al. (1996) and Schreibman (2000) indicate that parental involvement in learning activities can significantly improve outcomes, as they can monitor their children's progress and adapt the teaching pace to their individual needs.
+                </p>
+            </div>
+        </section>
+
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1 class="main-title">The Role of Technology in Learning for Children with Autism</h1>
+                <p class="description">
+                    Technology has opened new possibilities for inclusive education, especially in language learning and cognitive skills for children with special needs. Research by Moore et al. (2005) shows that digital platforms can be effective in improving the concentration and interest of children with ASD, thanks to their ability to offer interactive and customizable experiences. Digital tools also allow parents to access a catalog of resources specifically designed for their children's characteristics and preferences.
+                </p>
+            </div>
+            <div class="hero-image">
+                <img src="./Imag/5.jpg" alt="Interfaz de juegos educativos">
+            </div>
+        </section>
+
+        <section class="content-section">
+            <div class="content-image">
+                <img src="./Imag/6.jpg" alt="Niño aprendiendo con juegos educativos">
+            </div>
+            <div class="content-text">
+                <h2 class="section-title">Benefits of a Subscription-Based Cost Structure</h2>
+                <p class="description">
+                    Implementing a monthly subscription system allows the venture to maintain a stable and predictable cost structure. According to studies by Osterwalder & Pigneur (2010), the subscription model offers a stable solution for customers and generates recurring income for the business. This approach allows parents to access constantly updated materials and a reliable, long-term resource for their children's education. Moreover, the single membership fee ensures that all resources are available without additional payments, offering parents an accessible and stable service in terms of value.
+                </p>
+            </div>
+        </section>
+
+    </div>
+    <footer> 
+        <p>Follow us on:</p>
+        <div class="social-links">
+            <a href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="#" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://wa.me/73544681?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." target="_blank" class="whatsapp-link">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+        </div>
+    </footer>
+    
 </body>
 </html>
