--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="index.html">Start</a></li>
                 <li><a href="MarcoS.php">Strategic framework</a></li>
-                <li><a href="Register.php">Register</a></li>
+                <li><a href="Register.html">Register</a></li>
                 <li><a href="Login.php">Login</a></li>
             </ul>
         </nav>
